# social-agent

./: .env.example  .gitignore  AGENTS.md  README.md  ROADMAP.md  pyproject.toml  sources.md
backend/: alembic.ini
backend/alembic/: env.py
backend/alembic/versions/: 1144f4016923_initial_schema.py  e616a71aa7d2_add_idea_comment.py
backend/src/social_agent/: config.py  llm.py  main.py  media.py  scheduler.py  timezone_utils.py  utils.py
backend/src/social_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
backend/src/social_agent/agents/: __init__.py  base.py  ideator.py  writer.py
backend/src/social_agent/api/: router_drafts.py  router_ideas.py  router_publish.py  router_scheduler.py  router_seeds.py  router_sources.py
docs/: adding-platforms.md  agente-escritor.md  agente-ideador.md  api-rest.md  borradores.md  configuracion-llm.md  credenciales-linkedin.md  credenciales-twitter.md  desarrollo.md  estructura-proyecto.md  fuentes.md  ideas.md  modelos-datos.md  personalizacion-prompts.md  prompts-plataforma.md  publicacion-programada.md  semillas.md
frontend/: astro.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
frontend/.astro/: settings.json
frontend/src/components/: Icon.astro  Nav.astro
frontend/src/layouts/: Layout.astro
frontend/src/pages/: drafts.astro  ideas.astro  index.astro  seeds.astro  sources.astro
frontend/src/scripts/: card.ts  dom.ts  icons.ts  types.ts
frontend/src/styles/: global.css
templates/prompts/: interests.md
tests/: test_alembic.py  test_api.py  test_cli.py  test_collectors.py  test_ideator.py  test_linkedin_auth.py  test_markdown_store.py  test_migrate_to_sqlite.py  test_models.py  test_publishers.py  test_repositories_sqlalchemy.py  test_scheduler.py  test_sqlite_integration.py  test_writer.py
(+38 files in other folders)
