[project]
name = "social-agent"
version = "0.1.0"
description = "Sistema de agentes para gestión de redes sociales"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "fastapi>=0.110",
    "uvicorn[standard]",
    "pydantic>=2.0",
    "pydantic-settings",
    "pyyaml",
    "httpx",
    "feedparser",
    "beautifulsoup4",
    "litellm",
    "python-frontmatter",
    "tweepy>=4.16",
    "Pillow>=10.0",
    "python-multipart>=0.0.9",
    "markdownify>=1.2.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.3"]
playwright = ["playwright>=1.40"]

[project.scripts]
social-agent = "social_agent.cli.commands:cli"

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["backend/src"]

[tool.setuptools.packages.find]
where = ["backend/src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
